--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-handlebars": "^8.0.3",
+    "fuse.js": "^7.1.0",
     "hbs": "^4.2.0",
     "mongoose": "^8.15.0",
     "uuid": "^11.1.0"
