--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGODB_URI = mongodb+srv://aaronarmas:WutOusD4IhNVfOlO@vacaspecdb.8zyrj9x.mongodb.net/
+MONGODB_URI = mongodb+srv://aaronarmas:WutOusD4IhNVfOlO@vacaspecdb.8zyrj9x.mongodb.net/teamVacaSpecDB
+
 PORT = 3000
