--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "handlebars": "^4.7.8",
     "hbs": "^4.2.0",
     "mongoose": "^8.15.0",
+    "multer": "^2.0.2",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
